--- a/firebaseBlog/index.html
+++ b/firebaseBlog/index.html
@@ -48,6 +48,58 @@
         </div>
       </div>
     </nav>
+
+    <!-- Button trigger modal -->
+    <!-- <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      Launch demo modal
+    </button> -->
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <input type="text" class="form-control mb-3" id="editTitle" placeholder="Edit Title"/>
+            <textarea id="editContent" class="form-control mb-3" cols="30" rows="10" placeholder="Edit Content"></textarea>
+            <div class="d-flex g-3">
+              <label for="editPrivate">Private</label>
+              <input type="checkbox" id="editPrivate" />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="saveBlogChanges()">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div
       class="alert alert-danger alert-dismissible fade show d-none"
       id="errorContainer"
@@ -60,7 +112,6 @@
         aria-label="Close"
       ></button>
     </div>
-
 
     <div class="container mt-5">
       <div class="row" id="blogsContainer">
