--- a/firebaseBlog/createBlog/createBlog.html
+++ b/firebaseBlog/createBlog/createBlog.html
@@ -8,9 +8,24 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+    <style>
+      body {
+        background-color: #f8f9fa;
+      }
+      .container {
+        max-width: 600px;
+      }
+      .form-label {
+        font-weight: bold;
+      }
+      .error-container {
+        margin-top: 1rem;
+      }
+    </style>
   </head>
   <body onload="isLoggedIn()">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Blogify</a>
         <button
@@ -34,84 +49,88 @@
                 class="nav-link active"
                 aria-current="page"
                 href="./createBlog/createBlog.html"
-                >createBlog</a
+                >Create Blog</a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./profile/profile.html">Profile</a>
             </li>
             <li class="nav-item">
-              <button class="btn btn-primary" onclick="logoutHandler()">
-                Logout
-              </button>
+              <button class="btn btn-danger" onclick="logoutHandler()">Logout</button>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
+    <!-- Error Message -->
     <div
-        class="alert alert-danger alert-dismissible fade show d-none"
-        id="errorContainer"
-        role="alert"
-      >
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="alert"
-          aria-label="Close"
-        ></button>
-      </div>
+      class="alert alert-danger alert-dismissible fade show d-none error-container"
+      id="errorContainer"
+      role="alert"
+    >
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
+      <span id="errorText"></span>
+    </div>
 
-    <div class="container w-100">
-      <div class="mt-5 d-flex flex-column justify-content-center align-items-center w-100">
-        <div class="mb-3 w-100">
-          <label for="title" class="form-label"
-            >Title</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="title"
-            placeholder="Title"
-          />
-        </div>
-        <div class="mb-3 w-100">
-          <label for="content" class="form-label"
-            >Content</label
-          >
-          <textarea
-            class="form-control"
-            id="content"
-            rows="3"
-          ></textarea>
-        </div>
-        <div class="mb-3 w-100">
+    <!-- Blog Creation Form -->
+    <div class="container py-5">
+      <h2 class="text-center mb-4">Create a New Blog</h2>
+      <div class="card p-4 shadow-sm">
+        <form>
+          <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
             <input
-            type="checkbox"
-            class=""
-            id="isPrivate"
+              type="text"
+              class="form-control"
+              id="title"
+              placeholder="Enter blog title"
             />
-            <label for="isPrivate" class="form-label"
-              >IsPrivate</label
-            >
-        </div>
+          </div>
 
-        <div>
-            <button class="w-100 btn btn-primary" onclick="createBlog()">Create Blog</button>
-        </div>
+          <div class="mb-3">
+            <label for="content" class="form-label">Content</label>
+            <textarea
+              class="form-control"
+              id="content"
+              rows="4"
+              placeholder="Write your blog content here"
+            ></textarea>
+          </div>
+
+          <div class="mb-3 form-check">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="isPrivate"
+            />
+            <label class="form-check-label" for="isPrivate">Make it Private</label>
+          </div>
+
+          <div class="d-grid gap-2">
+            <button class="btn btn-primary" type="button" onclick="createBlog()">
+              Create Blog
+            </button>
+          </div>
+        </form>
       </div>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="./createBlog.js"></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"
-  ></script>
-  <script type="module" src="./createBlog.js"></script>
 </html>
