--- a/firebaseBlog/login/login.html
+++ b/firebaseBlog/login/login.html
@@ -11,6 +11,7 @@
   </head>
   <body onload="isLoggedIn()">
     <div class="container mt-5">
+      <!-- Error Container -->
       <div
         class="alert alert-danger alert-dismissible fade show d-none"
         id="errorContainer"
@@ -22,51 +23,65 @@
           data-bs-dismiss="alert"
           aria-label="Close"
         ></button>
+        <span id="errorText"></span>
       </div>
-      <h1 class="text-center">Login</h1>
+
+      <!-- Login Form -->
+      <h1 class="text-center mb-4">Login to Blogify</h1>
+
       <div class="row justify-content-center">
-        <div class="col-md-4 w-50 ">
-          <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              placeholder="Enter your email"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="Enter your password"
-            />
-          </div>
-          <button
-            type="button"
-            onclick="loginHandler()"
-            class="btn btn-primary w-100"
-          >
-            Login
-          </button>
-          <div class="mb-3">
-            <a href="../signup/signup.html">Don't have an Account?</a>
+        <div class="col-md-6 col-lg-4">
+          <div class="card p-4 shadow-sm border-0">
+            <div class="mb-3">
+              <label for="email" class="form-label">Email address</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="Enter your email"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                placeholder="Enter your password"
+                required
+              />
+            </div>
+
+            <!-- Login Button -->
+            <button
+              type="button"
+              onclick="loginHandler()"
+              class="btn btn-primary w-100"
+            >
+              Login
+            </button>
+
+            <!-- Signup Link -->
+            <div class="mt-3 text-center">
+              <a href="../signup/signup.html">Don't have an Account? Sign Up</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Bootstrap and Custom Scripts -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="./login.js"></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"
-  ></script>
-  <script type="module" src="./login.js"></script>
 </html>
