--- a/firebaseBlog/profile/profile.html
+++ b/firebaseBlog/profile/profile.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Firebase Blog - Dashboard</title>
+    <title>Firebase Blog - Profile</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
   </head>
   <body onload="isLoggedIn()">
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Blogify</a>
@@ -27,25 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./createBlog/createBlog.html"
-                >createBlog</a
-              >
+              <a class="nav-link" href="../createBlog/createBlog.html">Create Blog</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="./profile/profile.html"
-                >Profile</a
-              >
+              <a class="nav-link" href="#">Profile</a>
             </li>
             <li class="nav-item">
-              <button class="btn btn-primary" onclick="logoutHandler()">
-                Logout
-              </button>
+              <button class="btn btn-primary" onclick="logoutHandler()">Logout</button>
             </li>
           </ul>
         </div>
@@ -64,16 +56,84 @@
         aria-label="Close"
       ></button>
     </div>
+
+    <!-- Profile Container -->
+    <div class="container mt-5">
+      <h1 class="text-center mb-4">User Profile</h1>
+
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4">
+          <!-- Profile Card -->
+          <div class="card p-4 shadow-sm border-0">
+            <div class="text-center mb-4">
+              <h3 class="card-title" id="fullNameElem">John Doe</h3>
+              <p class="card-text" id="emailElem">johndoe@example.com</p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- Edit Profile Modal -->
+
+      <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <input type="text" class="form-control mb-3" id="editTitle" placeholder="Edit Title"/>
+            <textarea id="editContent" class="form-control mb-3" cols="30" rows="10" placeholder="Edit Content"></textarea>
+            <div class="d-flex g-3">
+              <label for="editPrivate">Private</label>
+              <input type="checkbox" id="editPrivate" />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="saveBlogChanges()">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+      <div class="container mt-5">
+        <div class="row" id="blogsContainer">
+          <p>No Blogs Found!</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap JS and Popper JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="./profile.js"></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"
-  ></script>
-  <script type="module" src="./profile.js"></script>
 </html>
