--- a/QuizApp-Firebase/admin/create-quiz/create-quiz.html
+++ b/QuizApp-Firebase/admin/create-quiz/create-quiz.html
@@ -41,11 +41,10 @@
 
     <!-- Navbar End -->
 
-
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-<script type="module" src="./dashboard.js"></script>
+<script type="module" src="./create-quiz.js"></script>
 
 </html>
