--- a/QuizApp-Firebase/admin/dashboard/dashboard.html
+++ b/QuizApp-Firebase/admin/dashboard/dashboard.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="../quizzes/quizzes.html">Quizzes</a>
                     </li>
                     <li class="nav-item">
-                        <button class="btn btn-danger">LogOut</button>
+                        <button class="btn btn-danger" onclick="logoutHandler()">LogOut</button>
                     </li>
                 </ul>
             </div>
@@ -40,7 +40,6 @@
     </nav>
 
     <!-- Navbar End -->
-
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
