--- a/QuizApp-Firebase/admin/create-quiz/create-quiz.html
+++ b/QuizApp-Firebase/admin/create-quiz/create-quiz.html
@@ -7,6 +7,7 @@
     <title>FIREBASEQuiz - Create Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="create-quiz.css">
 </head>
 
 <body>
@@ -40,6 +41,65 @@
     </nav>
 
     <!-- Navbar End -->
+
+
+    <!-- Create Quiz Form -->
+
+    <div class="container">
+        <div class="d-flex flex-column justify-content-center align-items-center vh-100">
+            <h1>Create Quiz</h1>
+            <div class="w-50">
+                <div class="mb-3">
+                    <label for="quiz-title" class="form-label">Quiz title</label>
+                    <input type="text" class="form-control" id="quiz-title" placeholder="basics of JS">
+                </div>
+                <div class="mb-3">
+                    <label for="category" class="form-label">Category</label>
+                    <input type="text" class="form-control" id="quiz-category" placeholder="Javascript">
+                </div>
+                <div class="mb-3">
+                    <label for="labels" class="form-label">Labels</label>
+                    <input type="text" class="form-control" id="quiz-label" placeholder="JS Basics">
+                </div>
+
+                <div class="border border-primary p-3">
+                    <div class="mb-3">
+                        <label for="question-text" class="form-label">Question</label>
+                        <input type="text" class="form-control" id="question-text" placeholder="HTML stands for?">
+                    </div>
+                    <div class="mb-3">
+                        <label for="option1" class="form-label">Option1</label>
+                        <input type="text" class="form-control" id="option1" placeholder="option1">
+                    </div>
+                    <div class="mb-3">
+                        <label for="option2" class="form-label">Option2</label>
+                        <input type="text" class="form-control" id="option2" placeholder="option2">
+                    </div>
+                    <div class="mb-3">
+                        <label for="option3" class="form-label">Option3</label>
+                        <input type="text" class="form-control" id="option3" placeholder="option3">
+                    </div>
+                    <div class="mb-3">
+                        <label for="option4" class="form-label">Option4</label>
+                        <input type="text" class="form-control" id="option4" placeholder="option4">
+                    </div>
+                    <div class="mb-3">
+                        <label for="correct-answer" class="form-label">Correct Answer</label>
+                        <input type="text" class="form-control" id="correct-answer" placeholder="Correct Answer">
+                    </div>
+                    <div class="mb-3">
+                        <button onclick="addQuestion()" class="btn btn-primary">Add Question</button>
+                    </div>
+                </div>
+
+                <div class="w-100">
+                    <button class="btn btn-primary" onclick="createQuizHandler(this)">Create Quiz</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Create Quiz Form End -->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
