--- a/QuizApp-Firebase/user/attempt-quiz/attempt-quiz.html
+++ b/QuizApp-Firebase/user/attempt-quiz/attempt-quiz.html
@@ -56,6 +56,10 @@
         .submit-btn:hover {
             background-color: #45a049;
         }
+
+        .result {
+            display: none
+        }
     </style>
 </head>
 <body>
@@ -86,7 +90,7 @@
             </div>
             <button class="btn btn-success w-100" onclick="nextQuestion()">Next Question</button>
         </div>
-    </div>
+        <div class="result"></div>   
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="module" src="./attempt-quiz.js"></script>
