--- a/QuizApp-Firebase/user/my-quizzes/my-quizzes.html
+++ b/QuizApp-Firebase/user/my-quizzes/my-quizzes.html
@@ -53,6 +53,33 @@
     </nav>
 
     <!-- Navbar End -->
+
+     <!-- Main content Start -->
+
+     <div class="container mt-5">
+      <div class="m-3">
+
+        <h1>My Quizzes</h1>
+        <p>Quizzes that are attempted by you</p>
+      </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Quiz</th>
+            <th scope="col">Total Questions</th>
+            <th scope="col">Correct Answer</th>
+            <th scope="col">Wrong Answer</th>
+            <th scope="col">Percentage</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody">
+        </tbody>
+      </table>
+     </div>
+
+
+      <!-- Main Continet End -->
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
