--- a/MongoDB-CURD/client/index.html
+++ b/MongoDB-CURD/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MongoDB Todo</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,22 +11,22 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body style="background-color: rgba(16, 5, 1, 0.904);">
     <div class="container">
       <div class="text-center mt-3">
-        <h1>MongoDB Todo</h1>
+        <h1 class="text-white">MongoDB Todo</h1>
       </div>
       <!-- Form for adding todos -->
       <div id="todoForm" class="my-4">
         <div class="mb-3">
-          <label for="title" class="form-label">Title</label>
+          <label for="title" class="form-label text-white">Title</label>
           <input type="text" class="form-control" id="title" />
         </div>
         <div class="mb-3">
-          <label for="description" class="form-label">Description</label>
+          <label for="description" class="form-label text-white">Description</label>
           <textarea class="form-control" id="description" rows="3"></textarea>
         </div>
-        <button class="btn btn-primary">Add Todo</button>
+        <button class="btn btn-primary" onclick="createTodo()">Add Todo</button>
       </div>
 
       <!-- Cards for displaying todos -->
