--- a/MongoDB-CURD/client/index.html
+++ b/MongoDB-CURD/client/index.html
@@ -27,6 +27,7 @@
           <textarea class="form-control" id="description" rows="3"></textarea>
         </div>
         <button class="btn btn-primary" onclick="createTodo()">Add Todo</button>
+        <button class="btn btn-primary" id="deleteAllBtn" onclick="deleteAll()">Delete All</button>
       </div>
 
       <!-- Cards for displaying todos -->
